--- a/SalesAnalysis/SalesAnalysis.ipynb
+++ b/SalesAnalysis/SalesAnalysis.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merge data from each month into one CSV"
+    "#### Merged data from each month into one CSV"
    ]
   },
   {
